# TermSender

./: .replit  README.md  app.py  config_manager.py  deployment_config.py  launch.py  pyproject.toml  replit.md  requirements.txt  sample_recipients.csv  termsender.py
analytics/: campaign_analytics.json
attached_assets/: Pasted-Build-a-Python-based-terminal-email-sender-tool-called-TermSender-that-runs-on-command-prompt-CMD-1758820863348_1758820863351.txt  Pasted-import-smtplib-from-email-mime-text-import-MIMEText-from-email-mime-multipart-import-MIMEMultipart-1758820980382_1758820980383.txt
config/: campaign_settings.json  email_lists.json  email_templates.json  smtp_servers.json
static/css/: style.css
static/js/: app.js
templates/: index.html
