[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "pandas>=2.3.2",
    "python-multipart>=0.0.20",
    "rich>=14.1.0",
    "typer>=0.19.2",
    "validators>=0.35.0",
    "werkzeug>=3.1.3",
]
